parse/internal/parser/testdata/failing/multi-remainder-arrays.trunnel
struct multi_remainder_arrays {
  u8 remaining_bytes[];
  u32 remaining_words[];
};
